--- a/AppFolio.html
+++ b/AppFolio.html
@@ -21,6 +21,7 @@
             <li><a href="index.html">HOME</a></li>
             <li><a href="Bio.html">ABOUT</a></li>
             <li><a href="Resume.html">RESUME</a></li>
+            <li><a href="AppFolio.html">APPS</a></li>
             <li><a href="Graphic Design.html">GRAPHIC DESIGN</a></li>
             <li>
                 <a id="nav_proj" href="Projects.html">PROJECTS</a>
@@ -56,6 +57,10 @@
         <li><a href="Resume.html">RESUME</a></li>
     </div>
     <div class="horizScrollDiv">
+        <a href="AppFolio.html"><img src="Images/apps.png" height="70" width="70"></a>
+        <li><a href="AppFolio.html">APPS</a></li>
+    </div>
+    <div class="horizScrollDiv">
         <a href="Graphic Design.html"><img src="Images/splashIcon.png" height="70" width="70"></a>
         <li><a href="Graphic Design.html">GRAPHIC DESIGN</a></li>
     </div>
@@ -75,7 +80,7 @@
 
 <div id="appFolio_bg"></div>
 
-<div id="title">
+<div id="title" class="title">
     <h1>The Definitive App Portfolio</h1>
     <p>App development is in my genes. Here's why.</p>
     <h1> <br/>  Apps I've Made<br/></h1>
@@ -90,7 +95,7 @@
             <p> A kick-ass iOS music analytics app that produces analytics data based on the user's listening
             habits. <br/> <strong>Currently published on the App Store.</strong></p>
             <p><strong>Frameworks: MediaPlayer</strong></p>
-            <div style="text-align: center"><a href="Beatslytics.html">View App ></a></div>
+            <div class="anchor-tag-alignment"><a href="Beatslytics.html">View App ></a></div>
         </div>
 
         <div id="app3" class="app">
@@ -99,7 +104,7 @@
             <p> An app for viewing CAD models on iOS devices, with options to adjust lighting effects,
                 execute animations and project models into the real world with <strong>Augmented Reality.</strong></p>
             <p><strong>Frameworks: ARKit</strong></p>
-            <div style="text-align: center"><a href="https://github.com/CSDTs/3D_Visualizer/tree/3D-Visualizer-iOS">View App ></a></div>
+            <div class="anchor-tag-alignment"><a href="https://github.com/CSDTs/3D_Visualizer/tree/3D-Visualizer-iOS">View App ></a></div>
         </div>
 
         <div id="app5" class="app">
@@ -108,7 +113,7 @@
             <p> A one of a kind mixed-service iOS music streaming app that combines Apple Music, Spotify and YouTube into one
             app, so you don't have to switch between apps to listen to music. </p>
             <p><strong>Frameworks: RxSwift, Apple Music API & Alamofire</strong></p>
-            <div style="text-align: center"><a href="https://github.com/s-more/Smore">View App ></a></div>
+            <div class="anchor-tag-alignment"><a href="https://github.com/s-more/Smore">View App ></a></div>
         </div>
     </div>
 
@@ -119,7 +124,7 @@
             <p>An innovative smart home iOS app that harnesses the power of Bluetooth Low Energy (BLE) to remote control
                 a smart desk.</p>
             <p><strong>Frameworks: CoreBluetooth & Lottie</strong></p>
-            <div style="text-align: center"><a href="https://github.com/ljw980105/SmartDesk">View App ></a></div>
+            <div class="anchor-tag-alignment"><a href="https://github.com/ljw980105/SmartDesk">View App ></a></div>
         </div>
 
         <div id="app4" class="app">
@@ -128,12 +133,12 @@
             <p>An open source iOS app that enables students with disability to open accessible doors.
             It uses BLE to communicate with hardware attached to the door to open it.</p>
             <p><strong>Frameworks: CoreBluetooth, Lottie & Alamofire</strong></p>
-            <div style="text-align: center"><a href="https://github.com/AutomaticDoorControl/AutoDoorCtrl-iOS">View App ></a></div>
+            <div class="anchor-tag-alignment"><a href="https://github.com/AutomaticDoorControl/AutoDoorCtrl-iOS">View App ></a></div>
         </div>
     </div>
 </div>
 
-<h1 style="margin-top: -4%">Work Experience</h1>
+<h1 style="margin-top: -4%" class="title">Work Experience</h1>
 
 <div id="experience">
     <div id="modmed" class="experience-style">
@@ -151,8 +156,7 @@
     </div>
 </div>
 
-
-<h1 style="margin-top: 3%">Tech Stack</h1>
+<h1 style="margin-top: 3%" class="title">Tech Stack</h1>
 
 <div id="teck_stack" class="dual_columns">
     <div class="col1">
@@ -177,8 +181,8 @@
         <div class="app">
             <img width="200px" height="200px" src="Images/AppFolio/BluetoothIcon.png">
             <h2>Bluetooth</h2>
-            <p> Through the production of the 3D Visualizer app, I've gained experience producing Augmented Reality applications
-                in iOS with the iOS framework ARKit and SceneKit. </p>
+            <p> I have built Arduino hardware that establishes a Bluetooth Low Energy signal and produced apps to send and receive
+            information from the hardware. </p>
         </div>
     </div>
     <div class="col2">
@@ -203,8 +207,8 @@
         <div class="app">
             <img width="200px" height="200px" src="Images/AppFolio/musicIcon.png">
             <h2>Music Streaming</h2>
-            <p> I have experience in iOS Networking through the uses of frameworks including Alamofire and NSURLSession. With them,
-                I've produced apps that interact with the Internet via REST APIs.</p>
+            <p> I've built two music streaming apps that either access the user's music library to play music or pull data from
+            the Apple Music API to browse and play the latest addition from any artists. </p>
         </div>
     </div>
 </div>
@@ -235,7 +239,7 @@
                     <div class="slideContents">
                         <li><a href="Projects.html">All Projects</a></li>
                         <li><a href="Games.html">2048 Game</a></li>
-                        <li><a href="proj_frc.html">FIRST Robotics</a></li>
+                        <li><a href="AppFolio.html">Apps</a></li>
                         <li><a href="Beatslytics.html">Beatslytics</a></li>
                         <li><a href="Litec.html">Embedded Control</a></li>
                         <li><a href="https://github.com/CSDTs/3D_Visualizer/tree/3D-Visualizer-iOS">3D Visualizer</a></li>
