--- a/Games.html
+++ b/Games.html
@@ -29,6 +29,7 @@
             <li><a href="index.html">HOME</a></li>
             <li><a href="Bio.html">ABOUT</a></li>
             <li><a href="Resume.html">RESUME</a></li>
+            <li><a href="AppFolio.html">APPS</a></li>
             <li><a href="Graphic Design.html">GRAPHIC DESIGN</a></li>
             <li>
                 <a id="nav_proj" href="Projects.html">PROJECTS</a>
@@ -62,6 +63,10 @@
     <div class="horizScrollDiv">
         <a href="Resume.html"><img src="Images/resumelogo.png" height="70" width="70"></a>
         <li><a href="Resume.html">RESUME</a></li>
+    </div>
+    <div class="horizScrollDiv">
+        <a href="AppFolio.html"><img src="Images/apps.png" height="70" width="70"></a>
+        <li><a href="AppFolio.html">APPS</a></li>
     </div>
     <div class="horizScrollDiv">
         <a href="Graphic Design.html"><img src="Images/splashIcon.png" height="70" width="70"></a>
@@ -129,7 +134,7 @@
                     <div class="slideContents">
                         <li><a href="Projects.html">All Projects</a></li>
                         <li><a href="Games.html">2048 Game</a></li>
-                        <li><a href="proj_frc.html">FIRST Robotics</a></li>
+                        <li><a href="AppFolio.html">Apps</a></li>
                         <li><a href="Beatslytics.html">Beatslytics</a></li>
                         <li><a href="Litec.html">Embedded Control</a></li>
                         <li><a href="https://github.com/CSDTs/3D_Visualizer/tree/3D-Visualizer-iOS">3D Visualizer</a></li>
