Enhanced AppFolio x ReadMe x New CV

--- a/AppFolio.html
+++ b/AppFolio.html
@@ -94,7 +94,7 @@
             <h2>BEATSLYTICS</h2>
             <p> A kick-ass iOS music analytics app that produces analytics data based on the user's listening
             habits. <br/> <strong>Currently published on the App Store.</strong></p>
-            <p><strong>Frameworks: MediaPlayer</strong></p>
+            <p><strong>Frameworks: MediaPlayer & CoreData</strong></p>
             <div class="anchor-tag-alignment"><a href="Beatslytics.html">View App ></a></div>
         </div>
 
@@ -112,7 +112,7 @@
             <h2>S'MORE</h2>
             <p> A one of a kind mixed-service iOS music streaming app that combines Apple Music, Spotify and YouTube into one
             app, so you don't have to switch between apps to listen to music. </p>
-            <p><strong>Frameworks: RxSwift, Apple Music API & Alamofire</strong></p>
+            <p><strong>Frameworks: RxSwift, Apple Music API, Alamofire & CoreData</strong></p>
             <div class="anchor-tag-alignment"><a href="https://github.com/s-more/Smore">View App ></a></div>
         </div>
     </div>
@@ -195,7 +195,7 @@
         <div class="app">
             <img width="200px" height="200px" src="Images/AppFolio/RxIcon.png">
             <h2>Reactive Programming</h2>
-            <p> After reading an RxSwift book by Ray Wenderlich, I gained knowledge in Reactive Programming, in the form of
+            <p> After reading an RxSwift book by Ray Wenderlich, I gained knowledge in Reactive Programming in the form of
             RxSwift, and was able to apply this skill in building the S'more App.</p>
         </div>
         <div class="app">
