July19 Resumes x CV

--- a/Resume.html
+++ b/Resume.html
@@ -99,7 +99,7 @@
     <h1> Welcome to My Digital Resume</h1>
     <p>
         Or View The
-        <a href="Files/ResumeJan19.pdf"> 📝 Standard Resume</a>
+        <a href="Files/ResumeJul19.pdf"> 📝 Standard Resume</a>
         <a href="Files/Curriculum%20Vitae.pdf">📜 CV</a>
     <p>
 </div>
