Added DraftKings Experience to AppFolio

--- a/AppFolio.html
+++ b/AppFolio.html
@@ -141,6 +141,20 @@
 <h1 style="margin-top: -4%" class="title">Work Experience</h1>
 
 <div id="experience">
+    <div id="dk" class="experience-style">
+        <img width="200px" height="200px" src="Images/AppFolio/DkIcon.png">
+        <div>
+            <h2> Software Engineering Intern</h2>
+            <h3> Summer 2019 @ DraftKings</h3>
+            <h4> Developed iOS & Android frameworks to scan the barcodes in driver’s licenses to report metadata
+                for identification purposes.
+            </h4>
+            <h4> Combined the above Android & iOS frameworks into a Xamarin.Forms library and developed tutorials on doing
+                such, which enabled DraftKings’ Xamarin team to leverage the power of native mobile libraries.
+            </h4>
+            <h4>Added new features to DraftKings’ iOS app’s login flow using the VIPER architecture to improve user experiences. </h4>
+        </div>
+    </div>
     <div id="modmed" class="experience-style">
         <img width="200px" height="200px" src="Images/AppFolio/ModMedIcon.png">
         <div>
@@ -158,7 +172,7 @@
 
 <h1 style="margin-top: 3%" class="title">Tech Stack</h1>
 
-<div id="teck_stack" class="dual_columns">
+<div id="tech_stack" class="dual_columns">
     <div class="col1">
         <div class="app">
             <img width="300px" height="300px" src="Images/AppFolio/AppleTechIcon.png">
