--- a/Resume.html
+++ b/Resume.html
@@ -99,7 +99,7 @@
     <h1> Welcome to My Digital Resume</h1>
     <p>
         Or View The
-        <a href="Files/ResumeJul19.pdf"> 📝 Standard Resume</a>
+        <a href="Files/ResumeAug2019.pdf"> 📝 Standard Resume</a>
         <a href="Files/Curriculum%20Vitae.pdf">📜 CV</a>
     <p>
 </div>
@@ -264,6 +264,18 @@
                     with the Media Player framework.  <br/>
 
                     • Gained familiarity with using iTunes Connect to publish an app to the App Store. <br/>
+                </h4>
+            </div>
+            <div id="ex8">
+                <h2>SOFTWARE ENGINEERING INTERN</h2>
+                <h3>SUMMER 2019 @DRAFTKINGS </h3>
+                <h4>
+                    • Developed iOS & Android frameworks to scan the barcodes in driver’s licenses to report metadata for identification purposes. <br/>
+
+                    • Combined the above Android & iOS frameworks into a Xamarin.Forms library and developed tutorials on doing such, which enabled
+                    DraftKings’ Xamarin team to leverage the power of native mobile libraries. <br/>
+
+                    • Added new features to DraftKing’ iOS app’s login flow using the VIPER architecture to improve user experiences.  <br/>
                 </h4>
             </div>
         </div>
