2020 Update and New Resume

--- a/Resume.html
+++ b/Resume.html
@@ -99,7 +99,7 @@
     <h1> Welcome to My Digital Resume</h1>
     <p>
         Or View The
-        <a href="Files/ResumeAug2019.pdf"> 📝 Standard Resume</a>
+        <a href="Files/ResumeJan2020.pdf"> 📝 Standard Resume</a>
         <a href="Files/Curriculum%20Vitae.pdf">📜 CV</a>
     <p>
 </div>
@@ -435,7 +435,7 @@
         <img src="Images/PersonalLogo.png">
     </div>
 </div>
-<h4 id="standalone_footer" style="text-align: center; margin: 3% 5%"> &copy; JING WEI LI 2017-2019. Proudly Created from Scratch</h4>
+<h4 id="standalone_footer" style="text-align: center; margin: 3% 5%"> &copy; JING WEI LI 2017-2020. Proudly Created from Scratch</h4>
 
 </body>
 </html>
