--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="JS/main2.js"></script>
     <meta charset="UTF-8">
     <meta name="apple-itunes-app" content="app-id=1403202526"/>
-    <title>Hi, I'm Li</title>
+    <title>Hi, I'm Jing</title>
     <link rel="icon" href="Images/icon png.png">
     <link href="CSS/styles2.css" rel="stylesheet" type="text/css" media="screen">
     <link href="CSS/common.css" rel="stylesheet" type="text/css" media="screen">
@@ -207,7 +207,7 @@
         <img src="Images/PersonalLogo.png">
     </div>
 </div>
-<h4 id="standalone_footer" style="text-align: center; margin: 3% 5%"> &copy; JING WEI LI 2017-2019. Proudly Created from Scratch</h4>
+<h4 id="standalone_footer" style="text-align: center; margin: 3% 5%"> &copy; JING WEI LI 2017-2020. Proudly Created from Scratch</h4>
 
 </body>
 </html>
