March 2020 Update - Added DK Job & New Resume

--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
 <div id="main">
     <div id="intro">
         <h1>JING WEI LI</h1>
-        <h2>Designer,</h2>
-        <h2>Engineer &</h2>
-        <h2>Mobile Developer.</h2>
+        <div id="sub-intro">
+            <h2>iOS Engineer, </h2>
+            <h2>Graphic Designer</h2>
+            <h4>Incoming Software Engineer @<a target="_blank" href="https://www.draftkings.com">DraftKings</a></h4>
+        </div>
     </div>
 
     <div id="social_media">
@@ -37,8 +39,6 @@
             <a id="sm2" target="_blank" href="https://www.linkedin.com/in/jingweili2/"><img src="Images/linkedin.png"
                                                                                             width="50"
                                                                                             height="50"></a>
-            <!--<a id="sm3" target="_blank" href="https://twitter.com/MrProLi"><img src="Images/twitter.png" width="50"-->
-                                                                                <!--height="50"></a>-->
             <a id="sm3" target="_blank" href="https://www.youtube.com/channel/UC33WP6-Af8Oy7SGzZm5mxng"><img
                     src="Images/yt.png" width="50" height="50"></a>
             <a id="sm4" target="_blank" href="https://www.flickr.com/photos/154270674@N02/"><img src="Images/flickr-circle.png"
